# llama4aj

./: .gitignore  LICENSE  README.md  bootstrap.gradle  build.gradle  gradle.properties  publish.gradle  settings.gradle
android/: build.gradle  gradle.properties
android/src/main/: CMakeLists.txt  allamaJNI.cpp
android/src/main/ajllama/: CMakeLists.txt
cpp/: README.md  ajllamaJNI.cpp  ggml.c  rn-llama-bridge.cpp  rn-llama.cpp  rn-llama.h
cpp/common/: chat.cpp.rej
cpp/common/jinja/: value.cpp
cpp/ggml-cuda/: acc.cuh  add-id.cuh  arange.cuh  argmax.cuh  argsort.cuh  binbcast.cuh  clamp.cuh  common.cuh  concat.cuh  conv-transpose-1d.cuh  conv2d-dw.cuh  conv2d-transpose.cuh  conv2d.cuh  convert.cuh  count-equal.cuh  cp-async.cuh  cpy-utils.cuh  cpy.cuh  cross-entropy-loss.cuh  cumsum.cuh  diag.cuh  diagmask.cuh  fattn-common.cuh  fattn-mma-f16.cuh  fattn-tile.cuh  fattn-vec.cuh  fattn-wmma-f16.cuh  fattn.cu  fattn.cuh  fill.cuh  getrows.cuh  ggml-cuda.cu  ggml-cuda.h  gla.cuh  im2col.cuh  mean.cuh  mma.cuh  mmf.cu  mmf.cuh  mmid.cuh  (+36 more)
cpp/ggml-metal/: ggml-metal-device.m
cpp/ggml-rpc/: ggml-rpc.cpp
cpp/ggml-vulkan/: ggml-vulkan.cpp
cpp/ggml-vulkan/vulkan-shaders/: vulkan-shaders-gen.cpp
desktop/: CMakeLists.txt  build.gradle
examples/android-app/: README.md  build.gradle  gradle.properties
examples/android-app/src/main/: AndroidManifest.xml
examples/android-app/src/main/java/com/example/llamaapp/: ChatAdapter.java  MainActivity.java  Message.java  ModelDownloadActivity.java  ModelInfoActivity.java  ModelManager.java
examples/android-app/src/main/res/drawable/: edittext_background.xml  message_background_model.xml  message_background_user.xml  rounded_edittext_background.xml  rounded_send_button_background.xml  section_background.xml
examples/android-app/src/main/res/layout/: activity_main.xml  activity_model_download.xml  activity_model_info.xml  item_chat_message.xml
examples/android-app/src/main/res/menu/: main_menu.xml
examples/android-app/src/main/res/values/: colors.xml  strings.xml  themes.xml
examples/android-app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
examples/desktop-app/: build.gradle
examples/desktop-app/src/main/java/com/example/desktopapp/: ConvoManager.java  Main.java
java/: build.gradle
java/src/main/java/com/: llama4aj.java
java/src/main/java/com/llama4aj/: LlamaContext.java
